--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,12 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+#https://console.cloud.google.com/
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT=
+
+#https://developers.facebook.com/
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_APP_CALLBACK_URL=
